before group meeting

--- a/QSSO_debug.ipynb
+++ b/QSSO_debug.ipynb
@@ -245,16 +245,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 200,
    "source": [
-    "a = np.sin(-0.01 * math.pi)"
+    "a = np.cos(-0.01 * math.pi)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 201,
    "source": [
     "a"
    ],
@@ -263,11 +263,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.03141075907812829"
+       "0.9995065603657316"
       ]
      },
      "metadata": {},
-     "execution_count": 197
+     "execution_count": 201
     }
    ],
    "metadata": {}
@@ -320,152 +320,6 @@
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "source": [
-    "import numpy as np\n",
-    "np.sin(np.radians(45))"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.7071067811865475"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "source": [
-    "\n",
-    "qbit = np.array([[np.sin(np.radians(45))], [np.sin(np.radians(45))]])\n",
-    "qbit[1, 0]"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.7071067811865475"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 68
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "source": [
-    "r = np.empty([2, 2])\n",
-    "theta = -0.02 * np.pi\n",
-    "r[0, 0] = np.cos(theta)\n",
-    "r[0, 1] = -np.sin(theta)\n",
-    "r[1, 0] = np.sin(theta)\n",
-    "r[1, 1] = np.cos(theta)\n",
-    "\n",
-    "#  [[ 0.99802673 -0.06279052]\n",
-    "#  [ 0.06279052  0.99802673]]\n",
-    "r"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[ 0.99802673,  0.06279052],\n",
-       "       [-0.06279052,  0.99802673]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 122
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "source": [
-    "a = r[0, 0]*qbit[0, 0] + r[0, 1]*qbit[1, 0]\n",
-    "b = r[1, 0]*qbit[0, 0] + r[1, 1]*qbit[1, 0]\n",
-    "qbit[0, 0] = a\n",
-    "qbit[1, 0] = b"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "source": [
-    "qbit"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[0.15643447],\n",
-       "       [0.98768834]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 146
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "source": [
-    "print(a)\n",
-    "print(b)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "0.15643446504023065\n",
-      "0.987688340595137\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   },
   {
